@@ -1,0 +1,5 @@
+<?php
+function testRuleAppliesToFunctionWithExitExpression()
+{
+    exit(0);
+}
