@@ -1,0 +1,5 @@
+<?php
+function testRuleNotAppliesToFunctionWithoutExitExpression()
+{
+    echo __FUNCTION__;
+}
